--- a/Website/index.html
+++ b/Website/index.html
@@ -27,14 +27,16 @@
                     <p class="mt-1 mybg2 rounded text-center">Tuiles chargées : 0</p>
                 </div>
                 <div class="container mybg rounded mb-4 py-3">
-                    test
-                </div>
-                <div class="container mybg rounded mb-4 py-3">
                     <p class="text-center fw-bold"><i class="fa-solid fa-book"></i> Légende
                     <hr>
-                </div>
-                <div class="container mybg rounded mb-4 py-3">
-                    test
+                    <p class="mt-1 mybg2 rounded">🟩 | 🌱 Herbe</p>
+                    <p class="mt-1 mybg2 rounded">🟦 | 🌊 Eau</p>
+                    <p class="mt-1 mybg2 rounded">🟫 | ⛰️ Montagne</p>
+                    <p class="mt-1 mybg2 rounded">🟧 | 🌳 Forêt</p>
+                    <p class="mt-1 mybg2 rounded">⬜ | 🏘️ Ville</p>
+                    <p class="mt-1 mybg2 rounded">⬛ | 🛣️ Route</p>
+                    <hr>
+                    <p class="mt-1 mybg2 rounded">🟥 | 🚫 Non accessible</p>
                 </div>
             </div>
             <div class="col-10 mt-5 rounded mybg text-white py-2">
