Ajout de plusieurs fonctions et finalisation du HTML

--- a/Website/index.html
+++ b/Website/index.html
@@ -15,7 +15,7 @@
             </h1>
         </div>
     </div>
-    <div class="container mt-3">
+    <div class="container mt-3 mb-3">
         <div class="row">
             <div class="col-2 rounded py-5 text-white">
                 <div class="container mybg rounded mb-4 py-3">
@@ -43,10 +43,9 @@
                 <div class="container d-flex justify-content-between">
                     <h2 class="py-2"><i class="fa-solid fa-map-pin"></i> Carte du monde</h2>
                     <p class="col-2 py-2 text-center fw-bold rounded mybg3">Zone : 0,0 → 5,5</p>
-                </div>
-                <div class="container rounded mybg3 mt-4 text-white">
-                    Test
-                </div>
+                </div>            
+                  <div class="grid-container" id="gridtuiles">
+                  </div>
             </div>
         </div>
     </div>
