--- a/Website/index.html
+++ b/Website/index.html
@@ -26,6 +26,17 @@
                     <p class="mt-1 mybg2 rounded text-center">Status API : Connected</p>
                     <p class="mt-1 mybg2 rounded text-center">Tuiles chargées : 0</p>
                 </div>
+                <div class="container mybg rounded mb-4 py-3 d-flex flex-column align-items-center justify-content-center" style="height: 200px;">
+                    <p class="fw-bold mb-3 text-center"><i class="fa-solid fa-arrows-up-down-left-right"></i> Déplacement</p>
+                    <div class="d-flex justify-content-center mb-2">
+                        <button id="btn-up" class="btn btn-primary"><i class="fa-solid fa-arrow-up"></i></button>
+                    </div>
+                    <div class="d-flex justify-content-center gap-2">
+                        <button id="btn-left" class="btn btn-primary"><i class="fa-solid fa-arrow-left"></i></button>
+                        <button id="btn-down" class="btn btn-primary"><i class="fa-solid fa-arrow-down"></i></button>
+                        <button id="btn-right" class="btn btn-primary"><i class="fa-solid fa-arrow-right"></i></button>
+                    </div>
+                </div>
                 <div class="container mybg rounded mb-4 py-3">
                     <p class="text-center fw-bold"><i class="fa-solid fa-book"></i> Légende
                     <hr>
