--- a/Website/index.html
+++ b/Website/index.html
@@ -15,6 +15,10 @@
             </h1>
         </div>
     </div>
+  <div id="notif" class="mybg text-white p-3 position-fixed top-0 end-0 m-3 rounded"></div>
+    <div class="container d-flex justify-content-end mt-3">
+        <button id="logoutBtn" class="btn btn-danger"><i class="fa-solid fa-right-from-bracket"></i> Déconnexion</button>
+    </div>
     <div class="container mt-3 mb-3">
         <div class="row">
             <div class="col-2 rounded py-5 text-white">
@@ -25,6 +29,9 @@
                     <p class="mt-1 mybg2 rounded text-center">Zone d'affichage : 5x5 tuiles</p>
                     <p class="mt-1 mybg2 rounded text-center">Status API : Connected</p>
                     <p class="mt-1 mybg2 rounded text-center">Tuiles chargées : 0</p>
+                </div>
+                <div id="perso_info" class="container mybg rounded mb-4 py-3"> <!--Sats du personnages-->
+
                 </div>
                 <div class="container mybg rounded mb-4 py-3 d-flex flex-column align-items-center justify-content-center" style="height: 200px;">
                     <p class="fw-bold mb-3 text-center"><i class="fa-solid fa-arrows-up-down-left-right"></i> Déplacement</p>
