--- a/Website/index.html
+++ b/Website/index.html
@@ -67,16 +67,43 @@
                     <h2 class="py-2"><i class="fa-solid fa-map-pin"></i> Carte du monde</h2>
                     <p class="col-2 py-2 text-center fw-bold rounded mybg3">Zone : 0,0 → 5,5</p>
                 </div>            
-                  <div class="grid-container" id="gridtuiles">
-                  </div>
+                <div class="grid-container" id="gridtuiles">
+                </div>
+                <div class="container text-center">
+                    <hr>
+                    <h5 class="py2"><a href="" id="darkMode">Mode sombre</a> | <a href="" id="lightMode">Mode clair</a></h5>
+                </div>
+                <div class="container text-center">
+                    <hr>
+                    <label for="quantity" class="form-label">ID du monstre</label>
+                    <input type="number" class="form-control text-center" id="simulatorID" value="1" min="1" step="1">
+                    <button class="btn btn-dark mt-3" id="simulator">Simuler un combat</button>
+                </div>
             </div>
         </div>
     </div>
-    <div class="modal fade" id="pokeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="pokeModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Informations sur la tuile</h5>
+        <h5 class="modal-title">Informations sur la tuile</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
+      </div>
+      <div class="modal-body">
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fermer</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="simulatorModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Simulation de combat</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
       </div>
       <div class="modal-body">
